--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           #👇 Chromatic projectToken, see https://storybook.js.org/tutorials/intro-to-storybook/react/en/deploy/ to obtain it
           projectToken: ${{ secrets.chpt_262f8b9e7bf15c3 }}
-          token: ${{ secrets.storybook }}
+          token: ${{ secrets.GIYOUN }}
